--- a/src/main/java/telas/Questionario1.form
+++ b/src/main/java/telas/Questionario1.form
@@ -977,7 +977,7 @@
             <Component class="javax.swing.JLabel" name="jLabel4">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/quest.jpg"/>
+                  <Image iconType="3" name="/relatorio.jpg"/>
                 </Property>
               </Properties>
               <Constraints>
